# fin

./: .gitignore  Cargo.toml  README.md  flake.nix  rustfmt.toml
src/: context.rs  journal.rs  lib.rs  main.rs  model.rs  parser.rs  scanner.rs
src/commands/: balance.rs  check.rs  fetch.rs  format.rs  mod.rs  parse.rs  print.rs  syntax.rs
src/importer/: mod.rs  postfinance.rs
src/model/: account.rs  analyzer.rs  assertion.rs  close.rs  command.rs  commodity.rs  date.rs  entities.rs  error.rs  journal.rs  journalbuilder.rs  lot.rs  mod.rs  model.rs  open.rs  posting.rs  price.rs  prices.rs  printer.rs  registry.rs  tag.rs  transaction.rs  value.rs
src/process/: cpr.rs  mod.rs
src/quotes/: yahoo.rs
src/report/: balance.rs  mod.rs  multiperiod_balance.rs  report.rs  segment_tree.rs  table.rs
src/syntax/: cst.rs  error.rs  file.rs  format.rs  mod.rs  parser.rs  parser2.rs  scanner.rs  scanner2.rs  sourcefile.rs  syntax.rs
