[package]
name = "fin"
version = "0.1.0"
authors = ["silvio"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
chrono = "0.4"
rust_decimal = "1.8.1"
pretty_assertions = "1.4.0"
thiserror = "1.0.60"
regex = "1.11.1"
